@@ -2,7 +2,10 @@ package com.education.corsalite.utils;
 
 import android.util.Log;
 
-import com.education.corsalite.BuildConfig;
+import com.crashlytics.android.Crashlytics;
+
+import java.io.File;
+import java.util.Date;
 
 /**
  * Created by vissu on 9/17/15.
@@ -15,15 +18,15 @@ public class L {
     private static final String ERROR = "ERROR";
 
     private static boolean isInfoEnabled() {
-        return (BuildConfig.DEBUG);
+        return true; //(BuildConfig.DEBUG);
     }
 
     private static boolean isDebugEnabled() {
-        return (BuildConfig.DEBUG);
+        return true; // (BuildConfig.DEBUG);
     }
 
     private static boolean isErrorEnabled() {
-        return BuildConfig.DEBUG;
+        return true; //BuildConfig.DEBUG;
     }
 
     public static void info(String message) {
@@ -88,13 +91,12 @@ public class L {
 
     public static void writeLogToFile() {
         // TODO : enable it when we need it
-//        try {
-//            File file = FileUtils.get().getLogFilePath(new Date().getTime() + ".log");
-//            Runtime.getRuntime().exec(new String[]{"logcat", "-f", file.getAbsolutePath()});
-////            Runtime.getRuntime().exec("logcat -f " + file);
-//        } catch (Exception ex) {
-//            L.error(ex.getMessage(), ex);
-//            Crashlytics.logException(ex);
-//        }
+        try {
+            File file = FileUtils.get().getLogFilePath(new Date().getTime() + ".log");
+            Runtime.getRuntime().exec(new String[]{"logcat", "-f", file.getAbsolutePath()});
+        } catch (Exception ex) {
+            L.error(ex.getMessage(), ex);
+            Crashlytics.logException(ex);
+        }
     }
 }
